# Agentic-Mesh

./: AgenticMesh.ipynb  Feature Engineering Pipeline.ipynb  README.md  basic_requirements.txt  pyproject.toml  requirements.txt
data/: optimized_dataset.xlsx  telecom.xlsx
