[tool.poetry]
name = "agentic mesh"
version = "0.1.0"
description = "Poetry hadling all requirements of Agentic Mesh"
authors = ["Anuj Sahani sahaniiianuj@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vllm = "^0.6.6.post1"
torch = "^2.5.1"
triton = "^3.1.0"
bitsandbytes = "^0.45.0"
accelerate = {git = "https://github.com/huggingface/accelerate.git"}
transformers = "^4.47.1"
peft = "^0.14.0"
llama-index-llms-huggingface = "^0.4.2"
llama-index-embeddings-langchain = "^0.3.0"
llama-index-embeddings-huggingface = "^0.4.0"
llama-index = "^0.12.10"
pandas = "^2.2.3"
openai = "^1.59.5"
sentence-transformers = "^3.3.1"
llama-index-llms-vllm = "^0.5.0"
llama-parse = "^0.5.19"
mlflow = "^2.19.0"
pyngrok = "^7.2.2"
gradio = "^5.10.0"
llama-index-llms-gemini = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
